# overwatch

./: .gitignore  INTEGRATION.md  README.md  demo_app.py  example_app.py  overwatch.yaml.example  pyproject.toml
overwatch/: __init__.py  __main__.py  app.py  app.tcss  cli.py  config.py  ipc.py  process.py
overwatch/monitors/: __init__.py  custom_metrics.py  file_watcher.py  http_health.py  process_stats.py
overwatch/widgets/: __init__.py  log_panel.py  monitor_card.py  monitor_sidebar.py  status_bar.py
sdk/: __init__.py  _transport.py  metrics.py
